--- a/Bicycle.FExtensions/Bicycle.FExtensions.csproj
+++ b/Bicycle.FExtensions/Bicycle.FExtensions.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>NET461</TargetFramework>
+    <Description />
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.0.0.2</AssemblyVersion>
+    <FileVersion>1.0.0.2</FileVersion>
+    <Version>1.0.0.2</Version>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>C:\Users\k.kosyanov\Documents\NuGet\</OutputPath>
   </PropertyGroup>
 
 </Project>
