Added string extension method "Left" that allows safety get subsrting from 0 char to length.

--- a/Bicycle.FExtensions/Bicycle.FExtensions.csproj
+++ b/Bicycle.FExtensions/Bicycle.FExtensions.csproj
@@ -3,12 +3,13 @@
     <TargetFrameworks>netcoreapp2.0;net461</TargetFrameworks>
     <Description>This is a small package for easier work in functional style</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.0.0.8</AssemblyVersion>
-    <FileVersion>1.0.0.8</FileVersion>
-    <Version>1.0.0.8</Version>
+    <AssemblyVersion>1.0.0.9</AssemblyVersion>
+    <FileVersion>1.0.0.9</FileVersion>
+    <Version>1.0.0.9</Version>
     <PackageProjectUrl>https://github.com/ConstKosyanov/Bicycle.FExtensions</PackageProjectUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Added SimpleJoin method which allows to filter collection by collection of keys.
+    <PackageReleaseNotes>Added string extension method "Left" that allows safety get subsrting from 0 char to length.
+Added SimpleJoin method which allows to filter collection by collection of keys.
 Added (Single/Where)With(Min/Max) method
 Added XML annotation for methods;
 Added TryGetSingle method;
